<resources>
    <string name="app_name">Workout Assistant</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_greeting">Workout Assistant Main Menu</string>
    <string name="list_button_string">View Workout List</string>
    <string name="add_results_but">Add Workout Results</string>
    <string name="title_activity_workout_list">View Workout List</string>
    <string name="title_db_test">Database Test</string>
    <string name="db_button">DB Test</string>
    <string name="id_text">ID : </string>
    <string name="workoutName_text">Workout Name : </string>
    <string name="workoutID_text">Workout ID : </string>
    <string name="dbResult_text">Database Results</string>
    <string name="addButText">ADD</string>
    <string name="deleteButText">DELETE</string>
    <string name="updateButText">UPDATE</string>
    <string name="findButText">FIND</string>
    <string name="title_activity_view_wo">ViewWOActivity</string>
    <string name="title_activity_woresults">Workout Results</string>
    <string name="title_activity_add_results">Add Workout Results</string>

</resources>
