<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/main_greeting" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_button_string"
        android:id="@+id/list_button"
        android:layout_below="@+id/main_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:onClick="goToList"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_button"
        android:id="@+id/button"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/list_button"
        android:layout_alignLeft="@+id/list_button"
        android:layout_alignStart="@+id/list_button"
        android:layout_alignRight="@+id/list_button"
        android:layout_alignEnd="@+id/list_button"
        android:onClick="goToDBTest"
        />

</RelativeLayout>
